# ml-engineering-practice

./: README.md  main.py  pyproject.toml
audio-signal-processing/.ipynb_checkpoints/: FourierTransform-checkpoint.ipynb
classical-ml/: lecture1.ipynb
