[project]
name = "ml-engineering-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.38.0",
    "jupyterlab>=4.5.4",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "ruff>=0.15.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
